fixed header on mobile devices

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  height: 100%;
 }
 
 .nav-item {
